Enhance SecurityConfig with CORS and JWT updates